--- a/Sunshine/app/src/main/res/layout/activity_main.xml
+++ b/Sunshine/app/src/main/res/layout/activity_main.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity"
+    tools:context="com.example.jose.sunshine.app.activity.activity.MainActivity"
     tools:ignore="MergeRootFrame" />
