--- a/Sunshine/app/src/main/res/layout/fragment_main.xml
+++ b/Sunshine/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.fragment.ForecastFragment">
+    tools:context="com.example.jose.sunshine.app.activity.fragment.ForecastFragment">
 
     <ListView
         android:id="@+id/listview_forecast"
