--- a/Sunshine/app/src/main/res/menu/menu_forecastfragment.xml
+++ b/Sunshine/app/src/main/res/menu/menu_forecastfragment.xml
@@ -1,6 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".activity.fragment.ForecastFragment">
+    xmlns:tools="http://schemas.android.com/tools" tools:context="com.example.jose.sunshine.app.activity.fragment.ForecastFragment">
+
+    <item android:id="@+id/action_map"
+        android:title="@string/action_map"
+        app:showAsAction="never" />
 
     <item android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
