--- a/Sunshine/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/Sunshine/app/src/main/res/layout/list_item_forecast_today.xml
@@ -47,17 +47,17 @@
         android:gravity="center_horizontal" >
 
         <ImageView
+            android:id="@+id/list_item_icon"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:id="@+id/list_item_icon"
             android:src="@drawable/art_clear" />
 
         <TextView
+            android:id="@+id/list_item_forecast_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Clear"
-            android:id="@+id/textView" />
+            android:text="Clear"  />
 
     </LinearLayout>
 
